# DataManager

./: .gitattributes  .gitignore  DATAMANAGER_TAURI_REWRITE_GOAL.md  README.md  config.json  electron-builder.yml  eslint.config.mjs  eslint.e2e.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.scripts.json
.github/: copilot-instructions.md
.github/workflows/: windows.yml
apps/desktop/: .env.e2e  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.browser-smoke.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.appdata.conf.mjs  wdio.conf.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: codegen.rs  files.rs  migration.rs  mod.rs  project_metadata.rs  settings.rs
artifacts/: interactive-smoke-20260710-183925.json  interactive-smoke-20260710-183954.json
docs/: interactive-smoke.md  migration.md  parity-matrix.md  rewrite-progress.md  settings.md
docs/adr/: 0001-legacy-compatibility-and-known-bugs.md  0002-exceljs-worker-spike.md
examples/EXCEL/: GameItemTable.xlsx  MonsterTable.xlsx  RewardItemTable.xlsx  StringTable.xlsx  TestTable.xlsx
patches/: @wdio__tauri-service@1.2.0.patch
scripts/: package-windows-portable.ps1  regenerate-rewrite-fixtures.ts  windows-example-settings-check.ps1  windows-excel-smoke.ps1  windows-installer-smoke.ps1  windows-interactive-smoke.ps1  windows-portable-smoke.ps1
(+231 files in other folders)
