[package]
name = "datamanager-desktop"
version = "0.1.1"
description = "DataManager Tauri desktop application"
authors = ["DataManager contributors"]
edition = "2021"
rust-version = "1.97.0"

[lib]
name = "datamanager_desktop_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[[bin]]
name = "datamanager-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
dunce = "1.0.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-wdio = { git = "https://github.com/webdriverio/desktop-mobile.git", rev = "6629cfbdf2e8972962ff3ca0f8422634880d82ed", optional = true }
tauri-plugin-wdio-webdriver = { version = "1.2.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
